--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,9 @@
     color: white;
     margin-top: 27px;
 }
-.custom__btn span {
+/* .custom__btn span {
     margin-right: 4px;
-}
+} */
 .custom__btn i {
     margin-left: 8px;
 }
