--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -86,7 +86,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-bottom: 300px;
+        margin-bottom: 50px;
     }
     .logo-area {
         width: 100%;
@@ -104,6 +104,38 @@
     .icon-contaier .fab {
         font-size: 22px;
     }
+
+
+    .container {
+        width: 100%;
+    }
+    fieldset {
+        margin: 10px;
+    }
+    fieldset legend {
+        font-size: 13px;
+    }
+    .contact-us input {
+        padding: 10px;
+        width: 80%;
+        background: #bcb8ec;
+        border: none;
+        border-radius: 5px;
+        margin: 5px auto;
+    }
+    .contact-us form {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .contact-us form {
+        margin-top: 0;
+    }
+    input.adress, 
+    textarea.text-area, 
+    input.send-now {
+        width: 70%;
+    }
+
 
 
 }
