--- a/styles/style.css
+++ b/styles/style.css
@@ -158,6 +158,57 @@ main {
     width: 100%;
 }
 
+/* contact us */
+.contact-us {
+    display: flex;
+    justify-content: center;
+}
+fieldset {
+    padding: 40px 20px;
+    color: #2D25A0;
+    margin-top: 50px;
+}
+fieldset legend {
+    margin-left: 50px;
+    padding: 10px;
+}
+.contact-us form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 5px;
+    grid-column-gap: 1px;
+    padding: 10px 30px;
+    margin-top: 20px;
+}
+.contact-us input {
+    padding: 10px;
+    width: 80%;
+    background: #bcb8ec;
+    border: none;
+    border-radius: 5px;
+    margin: 10px auto;
+}
+input.adress {
+    display: block;
+    margin: 0 auto;
+    background: #9993ec;
+    width: 85%;
+}
+textarea.text-area {
+    display: block;
+    width: 85%;
+    border-radius: 10px;
+    background: #b5b0f1;
+    padding: 12px;
+    margin: 20px auto;
+    border: none;
+}
+input.send-now {
+    display: block;
+    margin: 20px auto;
+    width: 85%;
+    color: #2D25A0;
+}
 
 
 /* logo area */
