done with hover effect

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -126,6 +126,7 @@
     .contact-us form {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+        margin-top: 0;
     }
     .contact-us form {
         margin-top: 0;
