image thik kora, mobile er jonno

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,6 +52,9 @@
         flex-direction: column;
         justify-content: center;
     }
+    .player-container img {
+        width: 100%;
+    }
     .player-container .img-container,
     .player-container p {
         margin: 0 auto;
