--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -51,6 +51,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
     }
     .player-container img {
         width: 100%;
