--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -44,7 +44,7 @@
     }
     .player {
         /* margin: 20px; */
-        margin: 10px auto;
+        margin: 15px auto;
         width: 80%;
     }
     .player-container {
@@ -58,7 +58,10 @@
     }
     .player-container .img-container,
     .player-container p {
-        margin: 0 auto;
+        margin: 10px auto;
+    }
+    .player-container p {
+        margin-bottom: 10px;
     }
     .img-containe {
         padding: 20px 10px;
